Fixed alignment of Home Page

--- a/src/components/InProgress/InProgress.module.css
+++ b/src/components/InProgress/InProgress.module.css
@@ -1,6 +1,7 @@
 .loader {
   position: relative;
-  margin-top: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   left: calc(50% - 5em);
   width: var(10em);
 }
